# momo

./: .env.example  .gitignore  ModernWMS.bat  README.md  README.zh_CN.md  backtest.py  config.py  dashboard.py  datafeed.py  display.py  main.py  pack.py  position.py  pyproject.toml  recommendations.py  requirements.txt  server.js  strategies.py  t0_fetcher.py  trades.py  启动说明.md
backend/ModernWMS/: Program.cs  appsettings.json
backend/ModernWMS.WMS/Services/Rolemenu/: RolemenuService.cs
data/: positions.json  t0_etf_list.json
frontend/: .env.development
signal_engine/: __init__.py  __main__.py  config.py
signal_engine/api/: collector.py  routes.py  search.py
signal_engine/core/: signal.py  state.py  strategies.py
signal_engine/data/: positions.py  recommendations.py  store.py  trades.py
signal_engine/services/: backtest.py  feed.py  t0_fetcher.py
static/: index.html  style.css
tests/: conftest.py  test_hl_cross.py  test_strategies.py
