[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signal_engine"
version = "1.0.0"
description = "T+0 品种盘中信号提醒系统 — 13 种技术策略，不做自动交易，只告诉你什么时候买、什么时候卖"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "curl_cffi>=0.5.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "akshare>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
momo = "signal_engine.dashboard:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
